@@ -13,4 +13,5 @@ Changes in 4.5.0
 6)  Don't unconditionally pass traffic from routemarked interfaces
     through the tcpre chain.
 
+7)  Automatically assign mark values.
 
